src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | OCStmt

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'
  45         | VAR IDENTIFIER

  46  Call : Receiver IDENTIFIER '(' Actuals ')'

  47  Expr : LValue
  48       | Call
  49       | Constant
  50       | Expr '+' Expr
  51       | Expr '-' Expr
  52       | Expr '*' Expr
  53       | Expr '/' Expr
  54       | Expr '%' Expr
  55       | Expr EQUAL Expr
  56       | Expr NOT_EQUAL Expr
  57       | Expr '<' Expr
  58       | Expr '>' Expr
  59       | Expr LESS_EQUAL Expr
  60       | Expr GREATER_EQUAL Expr
  61       | Expr AND Expr
  62       | Expr OR Expr
  63       | '(' Expr ')'
  64       | '-' Expr
  65       | '!' Expr
  66       | READ_INTEGER '(' ')'
  67       | READ_LINE '(' ')'
  68       | THIS
  69       | NEW IDENTIFIER '(' ')'
  70       | NEW Type '[' Expr ']'
  71       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  72       | '(' CLASS IDENTIFIER ')' Expr
  73       | Expr ARRAYREPEAT Constant
  74       | Expr CONCAT Expr
  75       | Expr '[' Expr SUBARRAY Expr ']'
  76       | Expr '[' Expr ']' DEFAULT Expr

  77  Constant : LITERAL
  78           | NULL

  79  Actuals : ExprList
  80          |

  81  ExprList : ExprList ',' Expr
  82           | Expr

  83  WhileStmt : WHILE '(' Expr ')' Stmt

  84  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  85  BreakStmt : BREAK

  86  IfStmt : IF '(' Expr ')' Stmt ElseClause

  87  ElseClause : ELSE Stmt
  88             |

  89  ReturnStmt : RETURN Expr
  90             | RETURN

  91  PrintStmt : PRINT '(' ExprList ')'

  92  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	'{'  shift 48
	'}'  shift 70
	SCOPY  shift 71
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 72
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 73
	Stmt  goto 74
	SimpleStmt  goto 75
	IfStmt  goto 76
	WhileStmt  goto 77
	ForStmt  goto 78
	ReturnStmt  goto 79
	PrintStmt  goto 80
	BreakStmt  goto 81
	OCStmt  goto 82
	LValue  goto 83
	Expr  goto 84
	Call  goto 85
	Receiver  goto 86
	Constant  goto 87


state 53
	Constant : NULL .  (78)

	.  reduce 78


state 54
	Expr : THIS .  (68)

	.  reduce 68


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (83)

	'('  shift 88
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (84)

	'('  shift 89
	.  error


state 57
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (86)

	'('  shift 90
	.  error


state 58
	ReturnStmt : RETURN . Expr  (89)
	ReturnStmt : RETURN .  (90)
	Receiver : .  (42)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	IDENTIFIER  reduce 42
	';'  reduce 90

	LValue  goto 91
	Expr  goto 92
	Call  goto 93
	Receiver  goto 86
	Constant  goto 87


state 59
	BreakStmt : BREAK .  (85)

	.  reduce 85


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (69)
	Expr : NEW . Type '[' Expr ']'  (70)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 94
	.  error

	Type  goto 95


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (91)

	'('  shift 96
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (66)

	'('  shift 97
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (67)

	'('  shift 98
	.  error


state 64
	Constant : LITERAL .  (77)

	.  reduce 77


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (71)

	'('  shift 99
	.  error


state 66
	LValue : VAR . IDENTIFIER  (45)

	IDENTIFIER  shift 100
	.  error


state 67
	Expr : '-' . Expr  (64)
	Receiver : .  (42)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	IDENTIFIER  reduce 42

	LValue  goto 91
	Expr  goto 101
	Call  goto 93
	Receiver  goto 86
	Constant  goto 87


state 68
	Expr : '!' . Expr  (65)
	Receiver : .  (42)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	IDENTIFIER  reduce 42

	LValue  goto 91
	Expr  goto 102
	Call  goto 93
	Receiver  goto 86
	Constant  goto 87


state 69
	Expr : '(' . Expr ')'  (63)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (72)
	Receiver : .  (42)

	CLASS  shift 103
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	IDENTIFIER  reduce 42

	LValue  goto 91
	Expr  goto 104
	Call  goto 93
	Receiver  goto 86
	Constant  goto 87


state 70
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 71
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (92)

	'('  shift 105
	.  error


state 72
	Stmt : VariableDef .  (28)

	.  reduce 28


state 73
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 74
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 75
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 106
	.  error


state 76
	Stmt : IfStmt .  (30)

	.  reduce 30


state 77
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 78
	Stmt : ForStmt .  (32)

	.  reduce 32


state 79
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 107
	.  error


state 80
	Stmt : PrintStmt . ';'  (34)

	';'  shift 108
	.  error


state 81
	Stmt : BreakStmt . ';'  (35)

	';'  shift 109
	.  error


state 82
	Stmt : OCStmt .  (37)

	.  reduce 37


state 83
	SimpleStmt : LValue . '=' Expr  (38)
	Expr : LValue .  (47)

	'='  shift 110
	AND  reduce 47
	OR  reduce 47
	LESS_EQUAL  reduce 47
	GREATER_EQUAL  reduce 47
	EQUAL  reduce 47
	NOT_EQUAL  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	'.'  reduce 47
	'['  reduce 47
	CONCAT  reduce 47
	ARRAYREPEAT  reduce 47


state 84
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . ARRAYREPEAT Constant  (73)
	Expr : Expr . CONCAT Expr  (74)
	Expr : Expr . '[' Expr SUBARRAY Expr ']'  (75)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (76)

	AND  shift 111
	OR  shift 112
	LESS_EQUAL  shift 113
	GREATER_EQUAL  shift 114
	EQUAL  shift 115
	NOT_EQUAL  shift 116
	'+'  shift 117
	'-'  shift 118
	'*'  shift 119
	'/'  shift 120
	'%'  shift 121
	'>'  shift 122
	'<'  shift 123
	'.'  shift 124
	'['  shift 125
	CONCAT  shift 126
	ARRAYREPEAT  shift 127
	.  error

